# sandbox

./: .gitignore  NOTES.md  README.md  dlt_test.ipynb  filesystem_pipeline.py
src/: .envrc  .gitignore  NOTES.md  file  pyproject.toml  takeout.ipynb  takeout_parser.py  toml_generator.py
